# web-protocols

./: .gitignore  smtp-db.drawio  smtp-db.sql
esp32-ap/src/: main.cpp
ftp/client-node/: clientFTP.js
ftp/ftpebbles/: Cargo.toml  README.md
ftp/ftpebbles/src/: lib.rs  main.rs  prelude.rs  settings.rs  startup.rs  telemetry.rs
ftp/ftpebbles/src/commands/: cwd.rs  dele.rs  handler.rs  mod.rs  pasv.rs  port.rs  retr.rs  stor.rs
ftp/nodeFTPClient/: package.json  tsconfig.json
ftp/nodeFTPClient/src/: format.ts  index.ts
ftp/server-rust/: Cargo.toml
ftp/server-rust/src/: lib.rs  main.rs  prelude.rs  settings.rs  startup.rs  telemetry.rs
ftp/server-rust/src/commands/: dele.rs  handler.rs  list.rs  mod.rs  retr.rs  stor.rs
ftp/svelteFrontFTP/: package.json  tailwind.config.js  vite.config.ts.timestamp-1732442101199-b7bdd0c736686.mjs
ftp/svelteFrontFTP/src/: App.svelte  app.css  types.d.ts
ftp/svelteFrontFTP/src/lib/Utils/: fetch.ts  schemas.ts
ftp/svelteFrontFTP/src/lib/components/: ActionButtons.svelte  AuthCard.svelte  FileExplorer.svelte  Modal.svelte
logs-app/: README  README.md  http-server.js
logs-app/backend-node/: package-lock.json  package.json  server.js  settings.json  tcp_server.js  udp_server.js  utils.js
logs-app/backend-rust/: Cargo.toml  README.md  settings.yaml
logs-app/backend-rust/src/: common.rs  handler.rs  lib.rs  main.rs  server.rs  settings.rs  telemetry.rs
logs-app/backend-rust/src/udp/: mod.rs  server.rs
logs-app/backend-rust/src/ws/: handler.rs  mod.rs  server.rs
logs-app/frontend/: client.js  const.js  http-server.js  index.html  package-lock.json  package.json  requests.js  settings.json
rs-232/arduino/: platformio.ini
rs-232/arduino/src/: main.cpp
rs-232/esp32/: platformio.ini
rs-232/esp32/data/webpage/: index.html  script.js  style.css
rs-232/esp32/data/webserver/: websocket.js
rs-232/esp32/data/websockets/: websockets.js
rs-232/esp32/src/: main.cpp
rs-232/server-node/: aveceslloro  client.js  functions.js  package.json  server.js
smtp/other/: nginx.conf
smtp/postgresql/: smtp-db.drawio  smtp-db.sql
smtp/smtpebbles/: Cargo.toml  README.md
smtp/smtpebbles/settings/: base.yaml  development.yaml
smtp/smtpebbles/src/: lib.rs  main.rs  prelude.rs  settings.rs  telemetry.rs
smtp/smtpebbles/src/app/: mod.rs  startup.rs
smtp/smtpebbles/src/app/handlers/: auth.rs  emails.rs  mail.rs  mod.rs
smtp/smtpebbles/src/app/routes/: mod.rs
smtp/smtpebbles/src/app/routes/auth/: login.rs  mod.rs  register.rs
smtp/smtpebbles/src/app/routes/mail/: mod.rs  send.rs
smtp/smtpebbles/src/app/types/: constants.rs  error.rs  mod.rs  postgres.rs  requests.rs
smtp/smtpebbles/src/app/utils/: mod.rs
smtp/smtpebbles/src/app/utils/auth/: cookies.rs  mod.rs  tokens.rs
smtp/smtpebbles/src/smtp/: email.rs  emails.rs  mail.rs  mod.rs  startup.rs
smtp/smtpebbles/src/smtp/commands/: data.rs  handler.rs  mail.rs  mod.rs  rcpt.rs
smtp/smtpebbles/src/utils/: postgres.rs
