[package]
name = "server-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
chrono = "0.4.38"
clap = "4.5.20"
rand = "0.8.5"
tokio = { version = "1.41.1", features = ["full"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["time", "env-filter", "fmt", "std", "tracing-log", "chrono"] }
