[package]
name = "backend-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-files = "0.6.6"
actix-web = "4.9.0"
actix-ws = "0.3.0"
env_logger = "0.11.5"
futures-util = "0.3.30"
tokio = { version = "1.40.0", features = ["macros", "time", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.10.0", features = ["v4"] }
